k8s/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enterprise-node-app
  namespace: devops-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: enterprise-node-app
  template:
    metadata:
      labels:
        app: enterprise-node-app
    spec:
      containers:
        - name: enterprise-node-app
          image: DOCKERHUB_USERNAME/enterprise-node-devops-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
