k8s/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: enterprise-node-service
  namespace: devops-prod
spec:
  selector:
    app: enterprise-node-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
